@@ -32,7 +32,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         put("site3", "1_337");
         put("site4", "1_343");
         put("site5", "1_349");
-        put("site6", "1_350");
+        put("site6", "1_351");
         put("site7", "1_353");
         put("site8", "1_356");
         put("site9", "1_360");
@@ -168,6 +168,14 @@ public class GenericCardTestHelper extends AbstractAtTest {
                 .findFirst().orElse(null);
     }
 
+    public PhysicalCardImpl GetFreepsRing() {
+        return (PhysicalCardImpl)_game.getGameState().getRing(P1);
+    }
+    public PhysicalCardImpl GetShadowRing() {
+        return (PhysicalCardImpl)_game.getGameState().getRing(P2);
+    }
+    public PhysicalCardImpl GetRingBearer() { return (PhysicalCardImpl)_game.getGameState().getRingBearer(P1); }
+    public PhysicalCardImpl GetShadowRingBearer() { return (PhysicalCardImpl)_game.getGameState().getRingBearer(P2); }
     public PhysicalCardImpl GetFreepsSite(int siteNum) { return GetSite(P1, siteNum); }
     public PhysicalCardImpl GetShadowSite(int siteNum) { return GetSite(P2, siteNum); }
     public PhysicalCardImpl GetSite(String playerID, int siteNum)
@@ -264,6 +272,19 @@ public class GenericCardTestHelper extends AbstractAtTest {
 
     public List<String> FreepsGetCardChoices() { return GetADParamAsList(P1, "cardId"); }
     public List<String> ShadowGetCardChoices() { return GetADParamAsList(P2, "cardId"); }
+
+    public int FreepsGetChoiceMin() { return Integer.parseInt(FreepsGetFirstADParam("min")); }
+    public int FreepsGetChoiceMax() { return Integer.parseInt(FreepsGetFirstADParam("max")); }
+    public int ShadowGetChoiceMin() { return Integer.parseInt(ShadowGetFirstADParam("min")); }
+    public int ShadowGetChoiceMax() { return Integer.parseInt(ShadowGetFirstADParam("max")); }
+
+    public int FreepsGetSelectableCount() {
+        return GetADParamEqualsCount(P1, "selectable", "true");
+    }
+
+    public int ShadowGetSelectableCount() {
+        return GetADParamEqualsCount(P2, "selectable", "true");
+    }
     public List<String> FreepsGetBPChoices() { return GetADParamAsList(P1, "blueprintId"); }
     public List<String> ShadowGetBPChoices() { return GetADParamAsList(P2, "blueprintId"); }
     public List<String> FreepsGetMultipleChoices() { return GetADParamAsList(P1, "results"); }
@@ -277,6 +298,10 @@ public class GenericCardTestHelper extends AbstractAtTest {
     public List<String> FreepsGetADParamAsList(String paramName) { return GetADParamAsList(P1, paramName); }
     public List<String> ShadowGetADParamAsList(String paramName) { return GetADParamAsList(P2, paramName); }
     public List<String> GetADParamAsList(String playerID, String paramName) { return Arrays.asList(GetAwaitingDecisionParam(playerID, paramName)); }
+
+    public int GetADParamEqualsCount(String playerID, String paramName, String value) {
+        return (int) Arrays.stream(GetAwaitingDecisionParam(playerID, paramName)).filter(s -> s.equals(value)).count();
+    }
     public String[] FreepsGetADParam(String paramName) { return GetAwaitingDecisionParam(P1, paramName); }
     public String[] ShadowGetADParam(String paramName) { return GetAwaitingDecisionParam(P2, paramName); }
     public String FreepsGetFirstADParam(String paramName) { return GetAwaitingDecisionParam(P1, paramName)[0]; }
@@ -294,18 +319,33 @@ public class GenericCardTestHelper extends AbstractAtTest {
     //public boolean HasItemIn
 
     public void FreepsUseCardAction(String name) throws DecisionResultInvalidException { playerDecided(P1, getCardActionId(P1, name)); }
-    public void FreepsUseCardAction(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P1, getCardActionId(P1, "Use " + GameUtils.getFullName(card))); }
+
+    public void FreepsUseCardAction(PhysicalCardImpl card) throws DecisionResultInvalidException {
+        playerDecided(P1, getCardActionId(P1, card.getCardId()));
+    }
     public void FreepsTransferCard(String name) throws DecisionResultInvalidException { FreepsTransferCard(GetFreepsCard(name)); }
-    public void FreepsTransferCard(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P1, getCardActionId(P1, "Transfer " + GameUtils.getFullName(card))); }
+
+    public void FreepsTransferCard(PhysicalCardImpl card) throws DecisionResultInvalidException {
+        playerDecided(P1, getCardActionId(P1, card.getCardId()));
+    }
     public void ShadowUseCardAction(String name) throws DecisionResultInvalidException { playerDecided(P2, getCardActionId(P2, name)); }
-    public void ShadowUseCardAction(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P2, getCardActionId(P2, "Use " + GameUtils.getFullName(card))); }
+
+    public void ShadowUseCardAction(PhysicalCardImpl card) throws DecisionResultInvalidException {
+        playerDecided(P2, getCardActionId(P2, card.getCardId()));
+    }
     public void ShadowTransferCard(String name) throws DecisionResultInvalidException { ShadowTransferCard(GetShadowCard(name)); }
     public void ShadowTransferCard(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P2, getCardActionId(P2, "Transfer " + GameUtils.getFullName(card))); }
 
     public void FreepsPlayCard(String name) throws DecisionResultInvalidException { FreepsPlayCard(GetFreepsCard(name)); }
-    public void FreepsPlayCard(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P1, getCardActionId(P1, "Play " + GameUtils.getFullName(card))); }
+
+    public void FreepsPlayCard(PhysicalCardImpl card) throws DecisionResultInvalidException {
+        playerDecided(P1, getCardActionId(P1, card.getCardId()));
+    }
     public void ShadowPlayCard(String name) throws DecisionResultInvalidException { ShadowPlayCard(GetShadowCard(name)); }
-    public void ShadowPlayCard(PhysicalCardImpl card) throws DecisionResultInvalidException { playerDecided(P2, getCardActionId(P2, "Play " + GameUtils.getFullName(card))); }
+
+    public void ShadowPlayCard(PhysicalCardImpl card) throws DecisionResultInvalidException {
+        playerDecided(P2, getCardActionId(P2, card.getCardId()));
+    }
 
     public int FreepsGetWoundsOn(String cardName) { return GetWoundsOn(GetFreepsCard(cardName)); }
     public int ShadowGetWoundsOn(String cardName) { return GetWoundsOn(GetShadowCard(cardName)); }
@@ -316,6 +356,9 @@ public class GenericCardTestHelper extends AbstractAtTest {
     public int GetCultureTokensOn(PhysicalCardImpl card) { return _game.getGameState().getTokenCount(card, Token.findTokenForCulture(card.getBlueprint().getCulture())); }
 
     public int GetBurdens() { return _game.getGameState().getBurdens(); }
+
+    public int GetFreepsCultureCount() { return GameUtils.getSpottableFPCulturesCount(_game, P1); }
+    public int GetShadowCultureCount() { return GameUtils.getSpottableShadowCulturesCount(_game, P1); }
 
     public boolean FreepsHasInitiative() { return PlayConditions.hasInitiative(_game, Side.FREE_PEOPLE); }
 
@@ -634,9 +677,6 @@ public class GenericCardTestHelper extends AbstractAtTest {
 
     public int GetMoveCount() { return _game.getGameState().getMoveCount(); }
 
-    public PhysicalCardImpl GetRingBearer() { return (PhysicalCardImpl)_game.getGameState().getRingBearer(P1); }
-    public PhysicalCardImpl GetOneRing() { return (PhysicalCardImpl)_game.getGameState().getRing(P1); }
-
     public boolean RBWearingOneRing() { return _game.getGameState().isWearingRing(); }
     public PhysicalCardImpl GetCurrentSite() { return (PhysicalCardImpl)_game.getGameState().getCurrentSite(); }
 
@@ -813,6 +853,9 @@ public class GenericCardTestHelper extends AbstractAtTest {
     public int ShadowGetFreepsAssignmentTargetCount() { return ShadowGetFreepsAssignmentTargets().size(); }
     public int ShadowGetShadowAssignmentTargetCount() { return ShadowGetShadowAssignmentTargets().size(); }
 
+    public void FreepsChooseCardBPFromSelection(String name) throws DecisionResultInvalidException { ChooseCardBPFromSelection(P1, GetFreepsCard(name));}
+    public void ShadowChooseCardBPFromSelection(String name) throws DecisionResultInvalidException { ChooseCardBPFromSelection(P2, GetShadowCard(name));}
+
     public void FreepsChooseCardBPFromSelection(PhysicalCardImpl...cards) throws DecisionResultInvalidException { ChooseCardBPFromSelection(P1, cards);}
     public void ShadowChooseCardBPFromSelection(PhysicalCardImpl...cards) throws DecisionResultInvalidException { ChooseCardBPFromSelection(P2, cards);}
 
@@ -909,9 +952,13 @@ public class GenericCardTestHelper extends AbstractAtTest {
         return siteNumber;
     }
 
-    public boolean HasKeyword(PhysicalCardImpl card, Keyword keyword)
+    public boolean hasKeyword(PhysicalCardImpl card, Keyword keyword)
     {
         return _game.getModifiersQuerying().hasKeyword(_game, card, keyword);
+    }
+
+    public boolean hasTimeword(PhysicalCardImpl card, Timeword timeword) {
+        return card.getBlueprint().hasTimeword(timeword);
     }
 
     public int GetKeywordCount(PhysicalCardImpl card, Keyword keyword)
@@ -935,6 +982,10 @@ public class GenericCardTestHelper extends AbstractAtTest {
         return _game.getModifiersQuerying().canBeAssignedToSkirmish(_game, side, card);
     }
 
+
+    public Boolean IsSiteControlled(PhysicalCardImpl card) {
+        return card.getCardController() != null;
+    }
 
 
 
@@ -986,7 +1037,8 @@ public class GenericCardTestHelper extends AbstractAtTest {
     public void ChooseAction(String playerID, String paramName, String option) throws DecisionResultInvalidException {
         List<String> choices = GetADParamAsList(playerID, paramName);
         for(String choice : choices){
-            if(choice.toLowerCase().contains(option.toLowerCase())) {
+            if(option == null && choice == null // This only happens when a rule is the source of an action
+                    || choice.toLowerCase().contains(option.toLowerCase())) {
                 playerDecided(playerID, String.valueOf(choices.indexOf(choice)));
                 return;
             }
@@ -995,6 +1047,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         playerDecided(playerID, option);
     }
 
+    public void FreepsResolveRuleFirst() throws DecisionResultInvalidException { FreepsResolveActionOrder(null); }
     public void FreepsResolveActionOrder(String option) throws DecisionResultInvalidException { ChooseAction(P1, "actionText", option); }
 
     public Filterable GenerateFreepsFilter(String filter) throws InvalidCardDefinitionException {
@@ -1071,7 +1124,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         }
         while(ShadowDecisionAvailable("discard down"))
         {
-            ShadowChooseCard((PhysicalCardImpl) GetShadowHand().get(0));
+            ShadowChooseCard((PhysicalCardImpl) GetShadowHand().getFirst());
         }
         if(FreepsDecisionAvailable("another move"))
         {
@@ -1083,7 +1136,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         }
         if(FreepsDecisionAvailable("discard down"))
         {
-            FreepsChooseCard((PhysicalCardImpl) GetFreepsHand().get(0));
+            FreepsChooseCard((PhysicalCardImpl) GetFreepsHand().getFirst());
         }
 
         //Shadow player
@@ -1096,7 +1149,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         }
         if(FreepsDecisionAvailable("discard down"))
         {
-            FreepsChooseCard((PhysicalCardImpl) GetFreepsHand().get(0));
+            FreepsChooseCard((PhysicalCardImpl) GetFreepsHand().getFirst());
         }
         if(ShadowDecisionAvailable("another move"))
         {
@@ -1108,7 +1161,7 @@ public class GenericCardTestHelper extends AbstractAtTest {
         }
         if(ShadowDecisionAvailable("discard down"))
         {
-            ShadowChooseCard((PhysicalCardImpl) GetShadowHand().get(0));
+            ShadowChooseCard((PhysicalCardImpl) GetShadowHand().getFirst());
         }
 
         Assert.assertTrue(GetCurrentPhase() == Phase.BETWEEN_TURNS
